# building-blocks

FastAPI/: README.md  app.py  requirements.txt
FastAPI/API_LIBRARY/constants/environment_config/: environment_configuration.py
FastAPI/API_LIBRARY/core/: container.py
FastAPI/API_LIBRARY/core/dto/: hello_dto.py
FastAPI/API_LIBRARY/core/manager_commands/commands/: __init__.py
FastAPI/API_LIBRARY/core/services/: hello_service.py
FastAPI/API_VIEWS/: vw_get_hello.py
NiceGUI with poetry/: README.md  pyproject.toml  requirements.txt
NiceGUI with poetry/src/: app.py
NiceGUI with poetry/src/API_LIBRARY/core/dto/: __init__.py
NiceGUI with poetry/src/API_LIBRARY/core/manager_commands/: ICommand.py  command_host.py  command_init.py
NiceGUI with poetry/src/API_LIBRARY/core/manager_commands/commands/: hello_command.py
NiceGUI with poetry/src/API_LIBRARY/core/services/: __init__.py  hello_service.py
NiceGUI with poetry/src/UI/: hello.py
aiohttp/: README.md  app.py
